tests/golden/invalid/bad-import.rego
package fregot.tests.invalid.bad_import

import wat.foo

valid = true
