tests/golden/invalid/bad-import.rego.stderr
fregot (fatal parse error):
  "bad-import.rego" (line 3, column 8):
  parse failed:

    3| import wat.foo
              ^

  unexpected wat.foo (imports should start with `data.` or `input.`)
